2009-11-12  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Darin Adler.

        externalRepresentation should take Frame as the argument
        https://bugs.webkit.org/show_bug.cgi?id=31393

        No new tests as this is just a refactoring.

        * WebCore.base.exp:
        * rendering/RenderTreeAsText.cpp:
        (WebCore::externalRepresentation):
        * rendering/RenderTreeAsText.h:

2009-11-12  Ben Murdoch  <benm@google.com>

        Reviewed by Dimitri Glazkov.

        [Android] The Android specific files in page/Android are out of date.
        https://bugs.webkit.org/show_bug.cgi?id=31437

        No tests required.

        * page/android/DragControllerAndroid.cpp:
        (WebCore::DragController::dragOperation): Added.
        (WebCore::DragController::cleanupAfterSystemDrag):
        * page/android/EventHandlerAndroid.cpp:
        (WebCore::EventHandler::accessKeyModifiers): Added.
        * page/android/InspectorControllerAndroid.cpp: Removed.

2009-11-12  Brent Fulgham  <bfulgham@webkit.org>

        Reviewed by Simon Fraser.

        [CAIRO] shadow support for Canvas and SVG.
        [https://bugs.webkit.org/show_bug.cgi?id=30960]

        Implement Canvas/SVG shadow support for Cairo.  This patch
        uses the filter code from SVG Filters.  That means that it is
        necessary to activate filters to see the shadows.

        Test: fast/canvas/canvas-shadow.html

        * GNUmakefile.am:
        * WebCore.vcproj/WebCore.vcproj: Add new ImageBufferFilter files.
        * platform/graphics/GraphicsContext.h:
        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (GraphicsContext::calculateShadowBufferDimensions): New helper routine.
        (WebCore::setPlatformFill):
        (WebCore::setPlatformStroke):
        (WebCore::copyContextProperties):
        (WebCore::drawPathShadow):
        (WebCore::GraphicsContext::fillPath):
        (WebCore::GraphicsContext::strokePath):